--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,33 @@
 ---
-- name: Add EPEL repository
+- name: Install unzip
   package:
-    name: epel-release
+    name: unzip
     state: latest
   tags:
-    - skip_ansible_lint
+    - skip_ansible_lint  # latest
+
+- name: Download terraform
+  get_url:
+    url: 'https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip'
+    dest: /usr/local/bin/
+    mode: 0555
+    # From e.g. https://releases.hashicorp.com/terraform/0.9.5/terraform_0.9.5_SHA256SUMS
+    checksum: sha256:0cbb5474c76d878fbc99e7705ce6117f4ea0838175c13b2663286a207e38d783
+
+- name: Unzip terraform
+  unarchive:
+    src: /usr/local/bin/terraform_{{ terraform_version }}_linux_amd64.zip
+    dest: /usr/local/bin/
+    remote_src: True
+
+- name: Download terragrunt
+  get_url:
+    url: 'https://github.com/gruntwork-io/terragrunt/releases/download/v{{ terragrunt_version }}/terragrunt_linux_amd64'
+    dest: /usr/local/bin/terragrunt
+    mode: 0555
+
+- name: Download jq
+  get_url:
+    url: 'https://github.com/stedolan/jq/releases/download/jq-{{ jq_version }}/jq-linux64'
+    dest: /usr/local/bin/jq
+    mode: 0555
