--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -7,7 +7,7 @@
     group: gitlab-runner
     mode: 0700
 
-- name: Configure ssh known_hosts
+- name: Configure .ssh/known_hosts
   copy:
     src: files/ssh_known_hosts
     dest: ~gitlab-runner/.ssh/known_hosts
@@ -15,3 +15,11 @@
     group: gitlab-runner
     mode: 0644
     backup: yes
+
+- name: Configure .ssh/config
+  copy:
+    src: files/ssh_config
+    dest: ~gitlab-runner/.ssh/config
+    owner: gitlab-runner
+    group: gitlab-runner
+    mode: 0644
