--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,4 +1,20 @@
 ---
+- name: Configure git user.name for gitlab-runner
+  git_config:
+    name: user.name
+    scope: global
+    value: GPII CI Robot
+  become: true
+  become_user: gitlab-runner
+
+- name: Configure git user.email for gitlab-runner
+  git_config:
+    name: user.email
+    scope: global
+    value: gpii-ci-no-reply@raisingthefloor.org
+  become: true
+  become_user: gitlab-runner
+
 - name: Create .ssh/
   file:
     path: /home/gitlab-runner/.ssh
