--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,18 +6,37 @@
   tags:
     - skip_ansible_lint  # latest
 
+# From https://github.com/azavea/ansible-terraform/blob/develop/tasks/main.yml
+- name: Check terraform version
+  shell: "/usr/local/bin/terraform --version | head -n1 | grep {{ terraform_version }}"
+  failed_when: False
+  changed_when: False
+  register: current_terraform_version
+
+- name: debug
+  debug:
+    msg: "{{ current_terraform_version, current_terraform_version.stdout, current_terraform_version.rc }}"
+
 - name: Download terraform
   get_url:
     url: 'https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip'
     dest: /usr/local/bin/
     mode: 0555
     checksum: '{{ terraform_checksum }}'
+  when: current_terraform_version.rc != 0
 
 - name: Unzip and install terraform
   unarchive:
     src: /usr/local/bin/terraform_{{ terraform_version }}_linux_amd64.zip
     dest: /usr/local/bin/
     remote_src: True
+  when: current_terraform_version.rc != 0
+
+- name: Check terragrunt version
+  shell: "/usr/local/bin/terragrunt --version | head -n1 | grep {{ terragrunt_version }}"
+  failed_when: False
+  changed_when: False
+  register: current_terragrunt_version
 
 - name: Download and install terragrunt
   get_url:
@@ -25,6 +44,13 @@
     dest: /usr/local/bin/terragrunt
     mode: 0555
     force: yes
+  when: current_terragrunt_version.rc != 0
+
+- name: Check jq version
+  shell: "/usr/local/bin/jq --version | head -n1 | grep {{ jq_version }}"
+  failed_when: False
+  changed_when: False
+  register: current_jq_version
 
 - name: Download and install jq
   get_url:
@@ -32,6 +58,7 @@
     dest: /usr/local/bin/jq
     mode: 0555
     force: yes
+  when: current_jq_version.rc != 0
 
 - name: Check for rvm gpg key
   command: gpg --list-keys
