--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,11 @@
 ---
-# Passed to ansible-gitlab-runner.
+# Passed to ansible-gitlab-runner
+gpii_ci_worker_gitlab_runner_concurrent: 4
+
+# Passed to ansible-gitlab-runner
 gpii_ci_worker_gitlab_runner_registration_token: ""
 
-# Passed to ansible-gitlab-runner.
+# Passed to ansible-gitlab-runner
 gpii_ci_worker_gitlab_runner_list: []
 
 gpii_ci_worker_terraform_version: 0.9.5
