--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -19,14 +19,15 @@
     dest: /usr/local/bin/
     mode: 0555
     checksum: '{{ gpii_ci_worker_terraform_checksum }}'
-  when: current_terraform_version.rc != 0
+  when: current_terraform_version.rc is not defined or current_terraform_version.rc != 0
+  register: terraform_downloaded
 
 - name: Unzip and install terraform
   unarchive:
     src: /usr/local/bin/terraform_{{ gpii_ci_worker_terraform_version }}_linux_amd64.zip
     dest: /usr/local/bin/
     remote_src: True
-  when: current_terraform_version.rc != 0
+  when: terraform_downloaded|changed
 
 - name: Check terragrunt version
   shell: "/usr/local/bin/terragrunt --version | head -n1 | grep {{ gpii_ci_worker_terragrunt_version }}"
@@ -40,7 +41,7 @@
     dest: /usr/local/bin/terragrunt
     mode: 0555
     force: yes
-  when: current_terragrunt_version.rc != 0
+  when: current_terragrunt_version.rc is not defined or current_terragrunt_version.rc != 0
 
 - name: Check jq version
   shell: "/usr/local/bin/jq --version | head -n1 | grep {{ gpii_ci_worker_jq_version }}"
@@ -54,7 +55,7 @@
     dest: /usr/local/bin/jq
     mode: 0555
     force: yes
-  when: current_jq_version.rc != 0
+  when: current_jq_version.rc is not defined or current_jq_version.rc != 0
 
 - name: Check for rvm gpg key
   command: gpg --list-keys
@@ -68,7 +69,7 @@
   command: gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
   become: true
   become_user: gitlab-runner
-  when: gpg_list_keys.stdout.find('Michal Papis (RVM signing) <mpapis@gmail.com>') == -1
+  when: gpg_list_keys.stdout is not defined or gpg_list_keys.stdout.find('Michal Papis (RVM signing) <mpapis@gmail.com>') == -1
 
 - name: Check for rvm installation
   stat:
