--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -44,6 +44,20 @@
     force: yes
   when: current_terragrunt_version.rc is not defined or current_terragrunt_version.rc != 0
 
+- name: Check kubectl version
+  shell: "/usr/local/bin/kubectl --version | head -n1 | grep {{ gpii_ci_worker_kubectl_version }}"
+  failed_when: False
+  changed_when: False
+  register: current_kubectl_version
+
+- name: Download and install kubectl
+  get_url:
+    url: 'https://storage.googleapis.com/kubernetes-release/release/{{ gpii_ci_worker_kubectl_version }}/bin/linux/amd64/kubectl'
+    dest: /usr/local/bin/kubectl
+    mode: 0555
+    force: yes
+  when: current_kubectl_version.rc is not defined or current_kubectl_version.rc != 0
+
 - name: Check jq version
   shell: "/usr/local/bin/jq --version | head -n1 | grep {{ gpii_ci_worker_jq_version }}"
   failed_when: False
