--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,6 +16,8 @@ gpii_ci_worker_terragrunt_version: 0.12.24
 
 gpii_ci_worker_kubectl_version: v1.7.2
 
+gpii_ci_worker_kops_version: 1.6.2
+
 gpii_ci_worker_jq_version: 1.5
 
 gpii_ci_worker_ruby_version: 2.4.0
