--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -58,6 +58,20 @@
     force: yes
   when: current_kubectl_version.rc is not defined or current_kubectl_version.rc != 0
 
+- name: Check kops version
+  shell: "/usr/local/bin/kops --version | head -n1 | grep {{ gpii_ci_worker_kops_version }}"
+  failed_when: False
+  changed_when: False
+  register: current_kops_version
+
+- name: Download and install kops
+  get_url:
+    url: 'https://github.com/kubernetes/kops/releases/download/{{ gpii_ci_worker_kops_version }}/kops-linux-amd64'
+    dest: /usr/local/bin/kops
+    mode: 0555
+    force: yes
+  when: current_kops_version.rc is not defined or current_kops_version.rc != 0
+
 - name: Check jq version
   shell: "/usr/local/bin/jq --version | head -n1 | grep {{ gpii_ci_worker_jq_version }}"
   failed_when: False
