--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -148,3 +148,12 @@
 - name: Install bundler with rvm
   command: sudo -i -u gitlab-runner gem install bundler
   when: bundler_exists.stat.exists == False
+
+- name: Check for rake installation
+  stat:
+    path: ~gitlab-runner/.rvm/gems/ruby-{{ gpii_ci_worker_ruby_version }}/bin/rake
+  register: rake_exists
+
+- name: Install rake with rvm
+  command: sudo -i -u gitlab-runner gem install rake
+  when: rake_exists.stat.exists == False
