--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -65,7 +65,7 @@
   when: current_terragrunt_version.rc is not defined or current_terragrunt_version.rc != 0
 
 - name: Check kubectl version
-  shell: "/usr/local/bin/kubectl --version | head -n1 | grep {{ gpii_ci_worker_kubectl_version }}"
+  shell: "/usr/local/bin/kubectl version --client --short | head -n1 | grep {{ gpii_ci_worker_kubectl_version }}"
   failed_when: False
   changed_when: False
   register: current_kubectl_version
@@ -79,7 +79,7 @@
   when: current_kubectl_version.rc is not defined or current_kubectl_version.rc != 0
 
 - name: Check kops version
-  shell: "/usr/local/bin/kops --version | head -n1 | grep {{ gpii_ci_worker_kops_version }}"
+  shell: "/usr/local/bin/kops version | head -n1 | grep {{ gpii_ci_worker_kops_version }}"
   failed_when: False
   changed_when: False
   register: current_kops_version
