Add gitlab-runner to docker group.

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,6 @@
 ---
 - src: https://github.com/DBLaci/ansible-gitlab-runner
   name: gitlab-runner
+
+- src: https://github.com/idi-ops/ansible-docker
+  name: docker
