--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,4 +1,10 @@
 ---
+- name: Add gitlab-runner to docker group
+  user:
+    name: gitlab-runner
+    groups: docker
+    append: true
+
 - name: Configure git user.name for gitlab-runner
   git_config:
     name: user.name
