--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -168,6 +168,15 @@
     force: yes
   when: current_jq_version.rc is not defined or current_jq_version.rc != 0
 
+- name: Install docker-compose
+  package:
+    name: "{{ item }}"
+    state: latest
+  with_items:
+    - docker-compose
+  tags:
+    - skip_ansible_lint
+
 - name: Check for rvm gpg key
   command: gpg --list-keys
   become: true
