--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-ansible == 2.3.2.0
+ansible
 flake8
 molecule == 1.25.1
 python-vagrant
 setuptools
+testinfra >= 1.7.1  # https://github.com/philpep/testinfra/issues/249
