--- a/meta/main.yml
+++ b/meta/main.yml
@@ -19,4 +19,4 @@ dependencies:
     gitlab_runner_concurrent: '{{ gpii_ci_worker_gitlab_runner_concurrent }}'
     gitlab_runner_registration_token: '{{ gpii_ci_worker_gitlab_runner_registration_token }}'
     gitlab_runner_list: '{{ gpii_ci_worker_gitlab_runner_list }}'
-  - docker
+  - role: docker-ce
