--- a/molecule.yml
+++ b/molecule.yml
@@ -15,7 +15,7 @@ vagrant:
         memory: 256
         cpus: 1
   instances:
-    - name: ansible-gpii-ci-worker
+    - name: gpii-ci-worker
       ansible_groups:
         - group1
 verifier:
